logs/pywiki2xhtml.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyWiki2xhtml'...
Compiling './lib/python3.5/site-packages/PyWiki2xhtml/flat2tree.py'...
***   File "./lib/python3.5/site-packages/PyWiki2xhtml/flat2tree.py", line 114
    print 'Base'
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/PyWiki2xhtml/helper.py'...
***   File "./lib/python3.5/site-packages/PyWiki2xhtml/helper.py", line 160
    print self.title(" INLINE ", "~")
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/PyWiki2xhtml/macros'...
Compiling './lib/python3.5/site-packages/PyWiki2xhtml/macros/helper.py'...
***   File "./lib/python3.5/site-packages/PyWiki2xhtml/macros/helper.py", line 95
    print self.title(" MACROS ", "~")
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/PyWiki2xhtml/macros/macro_attach.py'...
***   File "./lib/python3.5/site-packages/PyWiki2xhtml/macros/macro_attach.py", line 134
    print "="*60
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/PyWiki2xhtml/macros/macro_gmap.py'...
***   File "./lib/python3.5/site-packages/PyWiki2xhtml/macros/macro_gmap.py", line 110
    print "@%s@" % res
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/PyWiki2xhtml/macros/macro_mediaplayer.py'...
***   File "./lib/python3.5/site-packages/PyWiki2xhtml/macros/macro_mediaplayer.py", line 148
    print "="*60
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/PyWiki2xhtml/testcases'...
Listing './lib/python3.5/site-packages/PyWiki2xhtml/wikibar'...
Listing './lib/python3.5/site-packages/PyWiki2xhtml/wikibar/images'...
Listing './lib/python3.5/site-packages/PyWiki2xhtml-1.8.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
